--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -15,15 +15,23 @@ rust-version = "1.60"
 tauri-build = { version = "1.3.0", features = [] }
 
 [dependencies]
-serde_json = "1.0"
-serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.132"
+serde = { version = "1.0.214", features = ["derive"] }
 tauri = { version = "1.3.0", features = [ "clipboard-all", "http-all", "protocol-asset", "app-all", "global-shortcut-all", "window-set-always-on-top", "system-tray", "path-all", "process-all", "fs-all", "dialog-all", "os-all", "shell-all", "updater", "window-close", "window-hide", "window-maximize", "window-minimize", "window-set-fullscreen", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
 rusqlite = { version = "0.29.0", features = ["bundled"] }
 simple-home-dir = "0.2.0"
 font-loader = "0.11.0"
 aliyun-oss-rs = "0.0.5"
-chrono = "0.4.31"
+chrono = "0.4.38"
 window-shadows = "0.2.2"
+reqwest = "0.12.9"
+hmac = "0.12.1"
+sha2 = "0.10.8"
+http = "1.1.0"
+urlencoding = "2.1.3"
+base64 = "0.22.1"
+uuid = { version = "1.7.4", features = ["serde", "v4"] }
+log = "0.4.22"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
