--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-context-menu": "^2.2.1",
     "@tauri-apps/api": "^1.5.1",
     "@tmikeladze/react-cmdk": "1.3.14",
+    "@uiw/react-markdown-preview": "^5.1.3",
     "ahooks": "^3.7.7",
     "ali-oss": "^6.18.1",
     "antd": "^5.7.3",
