--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/plugin-syntax-unicode-sets-regex": "^7.18.6",
     "@babel/standalone": "^7.22.2",
     "@cantoo/pdf-lib": "^2.2.0",
+    "@fortaine/fetch-event-source": "^3.0.6",
     "@loadable/component": "^5.15.3",
     "@radix-ui/react-context-menu": "^2.2.1",
     "@tauri-apps/api": "^1.5.1",
