--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,7 +24,7 @@ font-loader = "0.11.0"
 aliyun-oss-rs = "0.0.5"
 chrono = "0.4.38"
 window-shadows = "0.2.2"
-reqwest = "0.12.9"
+reqwest = { version = "0.12.9", features = ["stream"] }
 hmac = "0.12.1"
 sha2 = "0.10.8"
 http = "1.1.0"
@@ -34,6 +34,8 @@ uuid = { version = "1.7.4", features = ["serde", "v4"] }
 log = "0.4.22"
 openai_api_rust = "0.1.9"
 htmd = "0.1.6"
+futures-util = "0.3.30"
+bytes = "1.7.2"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
