--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
-  "name": "editor",
+  "name": "notes",
   "private": true,
   "version": "0.9.9",
-  "main": "./out/main/index.js",
+  "author": {
+    "name": "LastKnightCoder"
+  },
+  "description": "Notes",
+  "main": "dist-electron/main/index.js",
   "scripts": {
     "start": "vite",
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build && electron-builder",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --fix",
     "preview": "vite preview",
     "tauri:dev": "tauri dev",
     "tauri:build": "tauri build",
     "updater": "node scripts/updater.mjs",
-    "release": "node scripts/release.mjs"
+    "release": "node scripts/release.mjs",
+    "rebuild": "electron-rebuild -f -w better-sqlite3"
   },
   "dependencies": {
     "@ant-design/charts": "^2.0.3",
@@ -31,6 +36,7 @@
     "ali-oss": "^6.18.1",
     "antd": "^5.7.3",
     "axios": "^1.4.0",
+    "better-sqlite3": "^11.8.1",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.3.2",
     "clsx": "^2.1.1",
@@ -89,6 +95,10 @@
     "@typescript-eslint/parser": "^5.59.2",
     "@vitejs/plugin-react-swc": "^3.3.0",
     "autoprefixer": "^10.4.19",
+    "electron": "^34.0.1",
+    "electron-builder": "^25.1.8",
+    "electron-devtools-installer": "^4.0.0",
+    "electron-rebuild": "^3.2.9",
     "eslint": "^8.39.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.5",
@@ -98,6 +108,7 @@
     "rollup-plugin-visualizer": "^5.9.2",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.0.4",
-    "vite": "4.3.9"
+    "vite": "4.3.9",
+    "vite-plugin-electron": "^0.29.0"
   }
 }
