--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "codemirror": "5",
     "dayjs": "^1.11.8",
     "eventemitter3": "^5.0.1",
+    "font-list": "^1.5.1",
     "framer-motion": "^10.13.0",
     "graphviz-react": "^1.2.5",
     "gsap": "^3.12.5",
