--- a/.github/workflows/electron-release.yml
+++ b/.github/workflows/electron-release.yml
@@ -16,7 +16,7 @@ jobs:
     
     steps:
       - name: Install Node.js, NPM and Yarn
-        - uses: actions/checkout@v3
+        uses: actions/checkout@v3
       - name: setup node
         uses: actions/setup-node@v3
         with:
