--- a/package.json
+++ b/package.json
@@ -20,68 +20,35 @@
     "rebuild": "electron-rebuild -f -w better-sqlite3"
   },
   "dependencies": {
+    "@electron/rebuild": "^3.7.1",
+    "ali-oss": "^6.18.1",
+    "antd": "^5.7.3",
+    "axios": "^1.4.0",
+    "better-sqlite3": "^11.8.1",
+    "dayjs": "^1.11.8",
+    "eventemitter3": "^5.0.1",
+    "font-list": "^1.5.1",
+    "fs-extra": "^11.3.0",
+    "llm-chunk": "^0.0.1",
+    "lodash": "^4.17.21",
+    "openai": "^4.80.1",
+    "path-intersection": "^3.1.0",
+    "sqlite-vec": "0.1.7-alpha.2",
+    "uuid": "^9.0.0",
+    "words-count": "^2.0.2"
+  },
+  "devDependencies": {
     "@ant-design/charts": "^2.0.3",
     "@ant-design/icons": "^5.0.1",
     "@antv/g6": "^4.8.20",
     "@babel/plugin-syntax-unicode-sets-regex": "^7.18.6",
     "@babel/standalone": "^7.22.2",
-    "@electron/rebuild": "^3.7.1",
+    "@actions/github": "^6.0.0",
     "@fortaine/fetch-event-source": "^3.0.6",
     "@loadable/component": "^5.15.3",
     "@radix-ui/react-context-menu": "^2.2.1",
     "@tmikeladze/react-cmdk": "1.3.14",
     "@uiw/react-markdown-preview": "^5.1.3",
-    "ahooks": "^3.7.7",
-    "ali-oss": "^6.18.1",
-    "antd": "^5.7.3",
-    "axios": "^1.4.0",
-    "better-sqlite3": "^11.8.1",
-    "class-variance-authority": "^0.7.0",
-    "classnames": "^2.3.2",
-    "clsx": "^2.1.1",
-    "codemirror": "5",
-    "dayjs": "^1.11.8",
-    "eventemitter3": "^5.0.1",
-    "font-list": "^1.5.1",
-    "framer-motion": "^10.13.0",
-    "fs-extra": "^11.3.0",
-    "graphviz-react": "^1.2.5",
-    "gsap": "^3.12.5",
-    "immer": "^10.0.2",
-    "is-hotkey": "^0.2.0",
-    "katex": "^0.16.8",
-    "lightgallery": "^2.7.2",
-    "llm-chunk": "^0.0.1",
-    "lodash": "^4.17.21",
-    "lucide-react": "^0.399.0",
-    "mermaid": "^10.1.0",
-    "openai": "^4.80.1",
-    "path-intersection": "^3.1.0",
-    "pdfjs-dist": "^4.5.136",
-    "react": "^18.2.0",
-    "react-cmdk": "^1.3.9",
-    "react-codemirror2": "^7.2.1",
-    "react-dnd": "^16.0.1",
-    "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.10.1",
-    "react-inlinesvg": "^4.0.5",
-    "react-router-dom": "^6.12.1",
-    "rehype-rewrite": "^4.0.2",
-    "slate": "^0.94.1",
-    "slate-history": "^0.93.0",
-    "slate-react": "^0.97.0",
-    "sqlite-vec": "0.1.7-alpha.2",
-    "swiper": "^11.0.3",
-    "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7",
-    "tinypng-lib": "^1.1.24",
-    "uuid": "^9.0.0",
-    "words-count": "^2.0.2",
-    "zustand": "^4.3.8"
-  },
-  "devDependencies": {
-    "@actions/github": "^6.0.0",
     "@tauri-apps/cli": "^1.5.6",
     "@types/ali-oss": "^6.16.11",
     "@types/babel__standalone": "^7.1.8",
@@ -99,7 +66,39 @@
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
     "@vitejs/plugin-react-swc": "^3.3.0",
+    "swiper": "^11.0.3",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
+    "tinypng-lib": "^1.1.24",
+    "ahooks": "^3.7.7",
     "autoprefixer": "^10.4.19",
+    "class-variance-authority": "^0.7.0",
+    "classnames": "^2.3.2",
+    "clsx": "^2.1.1",
+    "codemirror": "5",
+    "framer-motion": "^10.13.0",
+    "graphviz-react": "^1.2.5",
+    "gsap": "^3.12.5",
+    "immer": "^10.0.2",
+    "is-hotkey": "^0.2.0",
+    "katex": "^0.16.8",
+    "lightgallery": "^2.7.2",
+    "lucide-react": "^0.399.0",
+    "mermaid": "^10.1.0",
+    "pdfjs-dist": "^4.5.136",
+    "react": "^18.2.0",
+    "react-cmdk": "^1.3.9",
+    "react-codemirror2": "^7.2.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
+    "react-inlinesvg": "^4.0.5",
+    "react-router-dom": "^6.12.1",
+    "rehype-rewrite": "^4.0.2",
+    "slate": "^0.94.1",
+    "slate-history": "^0.93.0",
+    "slate-react": "^0.97.0",
     "electron": "^34.0.1",
     "electron-builder": "^25.1.8",
     "electron-devtools-installer": "^4.0.0",
@@ -113,6 +112,7 @@
     "tailwindcss": "^3.4.4",
     "typescript": "^5.0.4",
     "vite": "4.3.9",
-    "vite-plugin-electron": "^0.29.0"
+    "vite-plugin-electron": "^0.29.0",
+    "zustand": "^4.3.8"
   }
 }
