--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
   "dependencies": {
     "@electron/rebuild": "^3.7.1",
     "ali-oss": "^6.18.1",
-    "antd": "^5.7.3",
     "axios": "^1.4.0",
     "better-sqlite3": "^11.8.1",
     "dayjs": "^1.11.8",
@@ -38,18 +37,17 @@
     "words-count": "^2.0.2"
   },
   "devDependencies": {
+    "@actions/github": "^6.0.0",
     "@ant-design/charts": "^2.0.3",
     "@ant-design/icons": "^5.0.1",
     "@antv/g6": "^4.8.20",
     "@babel/plugin-syntax-unicode-sets-regex": "^7.18.6",
     "@babel/standalone": "^7.22.2",
-    "@actions/github": "^6.0.0",
     "@fortaine/fetch-event-source": "^3.0.6",
     "@loadable/component": "^5.15.3",
     "@radix-ui/react-context-menu": "^2.2.1",
-    "@tmikeladze/react-cmdk": "1.3.14",
-    "@uiw/react-markdown-preview": "^5.1.3",
     "@tauri-apps/cli": "^1.5.6",
+    "@tmikeladze/react-cmdk": "1.3.14",
     "@types/ali-oss": "^6.16.11",
     "@types/babel__standalone": "^7.1.8",
     "@types/better-sqlite3": "^7.6.12",
@@ -61,34 +59,43 @@
     "@types/lodash": "^4.14.200",
     "@types/node": "^20.2.1",
     "@types/react": "^18.2.0",
+    "@types/react-color": "^3.0.13",
     "@types/react-dom": "^18.2.1",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
+    "@uiw/react-markdown-preview": "^5.1.3",
     "@vitejs/plugin-react-swc": "^3.3.0",
-    "swiper": "^11.0.3",
-    "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7",
-    "tinypng-lib": "^1.1.24",
+    "antd": "^5.7.3",
     "ahooks": "^3.7.7",
     "autoprefixer": "^10.4.19",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.3.2",
     "clsx": "^2.1.1",
     "codemirror": "5",
+    "electron": "^34.0.1",
+    "electron-builder": "^25.1.8",
+    "electron-devtools-installer": "^4.0.0",
+    "eslint": "^8.39.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.3.5",
     "framer-motion": "^10.13.0",
     "graphviz-react": "^1.2.5",
     "gsap": "^3.12.5",
     "immer": "^10.0.2",
     "is-hotkey": "^0.2.0",
     "katex": "^0.16.8",
+    "less": "^4.1.3",
     "lightgallery": "^2.7.2",
     "lucide-react": "^0.399.0",
     "mermaid": "^10.1.0",
+    "node-fetch": "^3.3.2",
     "pdfjs-dist": "^4.5.136",
+    "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-cmdk": "^1.3.9",
     "react-codemirror2": "^7.2.1",
+    "react-color": "^2.19.3",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
@@ -96,20 +103,15 @@
     "react-inlinesvg": "^4.0.5",
     "react-router-dom": "^6.12.1",
     "rehype-rewrite": "^4.0.2",
+    "rollup-plugin-visualizer": "^5.9.2",
     "slate": "^0.94.1",
     "slate-history": "^0.93.0",
     "slate-react": "^0.97.0",
-    "electron": "^34.0.1",
-    "electron-builder": "^25.1.8",
-    "electron-devtools-installer": "^4.0.0",
-    "eslint": "^8.39.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.3.5",
-    "less": "^4.1.3",
-    "node-fetch": "^3.3.2",
-    "postcss": "^8.4.38",
-    "rollup-plugin-visualizer": "^5.9.2",
+    "swiper": "^11.0.3",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.4",
+    "tailwindcss-animate": "^1.0.7",
+    "tinypng-lib": "^1.1.24",
     "typescript": "^5.0.4",
     "vite": "4.3.9",
     "vite-plugin-electron": "^0.29.0",
