--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@electron/rebuild": "^3.7.1",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "ali-oss": "^6.18.1",
     "axios": "^1.4.0",
     "better-sqlite3": "^11.8.1",
@@ -45,8 +46,6 @@
     "@babel/standalone": "^7.22.2",
     "@fortaine/fetch-event-source": "^3.0.6",
     "@loadable/component": "^5.15.3",
-    "@radix-ui/react-context-menu": "^2.2.1",
-    "@tauri-apps/cli": "^1.5.6",
     "@tmikeladze/react-cmdk": "1.3.14",
     "@types/ali-oss": "^6.16.11",
     "@types/babel__standalone": "^7.1.8",
@@ -64,10 +63,9 @@
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
-    "@uiw/react-markdown-preview": "^5.1.3",
     "@vitejs/plugin-react-swc": "^3.3.0",
-    "antd": "^5.7.3",
     "ahooks": "^3.7.7",
+    "antd": "^5.7.3",
     "autoprefixer": "^10.4.19",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.3.2",
@@ -101,16 +99,17 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-inlinesvg": "^4.0.5",
+    "react-markdown": "^9.0.3",
     "react-router-dom": "^6.12.1",
-    "rehype-rewrite": "^4.0.2",
+    "react-syntax-highlighter": "^15.6.1",
+    "rehype-katex": "^7.0.1",
+    "remark-gfm": "^4.0.0",
+    "remark-math": "^6.0.0",
     "rollup-plugin-visualizer": "^5.9.2",
     "slate": "^0.94.1",
     "slate-history": "^0.93.0",
     "slate-react": "^0.97.0",
     "swiper": "^11.0.3",
-    "tailwind-merge": "^2.3.0",
-    "tailwindcss": "^3.4.4",
-    "tailwindcss-animate": "^1.0.7",
     "tinypng-lib": "^1.1.24",
     "typescript": "^5.0.4",
     "vite": "4.3.9",
