--- a/package.json
+++ b/package.json
@@ -10,32 +10,25 @@
   "scripts": {
     "start": "vite",
     "dev": "vite",
-    "build": "tsc && vite build && electron-builder",
+    "build": "cross-env NODE_OPTIONS='--max-old-space-size=8192' tsc && vite build && electron-builder",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --fix",
     "preview": "vite preview",
-    "tauri:dev": "tauri dev",
-    "tauri:build": "tauri build",
     "updater": "node scripts/updater.mjs",
     "release": "node scripts/release.mjs",
-    "rebuild": "electron-rebuild -f -w better-sqlite3"
+    "rebuild": "electron-rebuild -f -w better-sqlite3",
+    "postinstall": "npm run rebuild"
   },
   "dependencies": {
     "@electron/rebuild": "^3.7.1",
-    "@types/react-syntax-highlighter": "^15.5.13",
-    "ali-oss": "^6.18.1",
     "axios": "^1.4.0",
     "better-sqlite3": "^11.8.1",
-    "dayjs": "^1.11.8",
     "eventemitter3": "^5.0.1",
     "font-list": "^1.5.1",
     "fs-extra": "^11.3.0",
     "llm-chunk": "^0.0.1",
-    "lodash": "^4.17.21",
+    "ali-oss": "^6.22.0",
     "openai": "^4.80.1",
-    "path-intersection": "^3.1.0",
-    "sqlite-vec": "0.1.7-alpha.2",
-    "uuid": "^9.0.0",
-    "words-count": "^2.0.2"
+    "sqlite-vec": "0.1.7-alpha.2"
   },
   "devDependencies": {
     "@actions/github": "^6.0.0",
@@ -60,6 +53,7 @@
     "@types/react": "^18.2.0",
     "@types/react-color": "^3.0.13",
     "@types/react-dom": "^18.2.1",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
@@ -71,6 +65,8 @@
     "classnames": "^2.3.2",
     "clsx": "^2.1.1",
     "codemirror": "5",
+    "cross-env": "^7.0.3",
+    "dayjs": "^1.11.13",
     "electron": "^34.0.1",
     "electron-builder": "^25.1.8",
     "electron-devtools-installer": "^4.0.0",
@@ -85,9 +81,11 @@
     "katex": "^0.16.8",
     "less": "^4.1.3",
     "lightgallery": "^2.7.2",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.399.0",
     "mermaid": "^10.1.0",
     "node-fetch": "^3.3.2",
+    "path-intersection": "^3.1.0",
     "pdfjs-dist": "^4.5.136",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
@@ -112,8 +110,10 @@
     "swiper": "^11.0.3",
     "tinypng-lib": "^1.1.24",
     "typescript": "^5.0.4",
+    "uuid": "^9.0.1",
     "vite": "4.3.9",
     "vite-plugin-electron": "^0.29.0",
+    "words-count": "^2.0.2",
     "zustand": "^4.3.8"
   }
 }
