--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
   },
   "dependencies": {
     "@electron/rebuild": "^3.7.1",
+    "ali-oss": "^6.22.0",
     "axios": "^1.4.0",
     "better-sqlite3": "^11.8.1",
     "eventemitter3": "^5.0.1",
     "font-list": "^1.5.1",
     "fs-extra": "^11.3.0",
     "llm-chunk": "^0.0.1",
-    "ali-oss": "^6.22.0",
     "openai": "^4.80.1",
     "sqlite-vec": "0.1.7-alpha.2"
   },
@@ -83,6 +83,7 @@
     "lightgallery": "^2.7.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.399.0",
+    "markdown-table": "^3.0.4",
     "mermaid": "^10.1.0",
     "node-fetch": "^3.3.2",
     "path-intersection": "^3.1.0",
@@ -101,8 +102,11 @@
     "react-router-dom": "^6.12.1",
     "react-syntax-highlighter": "^15.6.1",
     "rehype-katex": "^7.0.1",
+    "remark-directive": "^3.0.1",
     "remark-gfm": "^4.0.0",
     "remark-math": "^6.0.0",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.1",
     "rollup-plugin-visualizer": "^5.9.2",
     "slate": "^0.94.1",
     "slate-history": "^0.93.0",
@@ -110,6 +114,9 @@
     "swiper": "^11.0.3",
     "tinypng-lib": "^1.1.24",
     "typescript": "^5.0.4",
+    "unified": "^11.0.5",
+    "unist-util-remove": "^4.0.0",
+    "unist-util-visit": "^5.0.0",
     "uuid": "^9.0.1",
     "vite": "4.3.9",
     "vite-plugin-electron": "^0.29.0",
