--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "font-list": "^1.5.1",
     "fs-extra": "^11.3.0",
     "llm-chunk": "^0.0.1",
+    "nodejieba": "^3.4.4",
     "openai": "^4.80.1",
+    "pinyin": "4.0.0-alpha.2",
     "roughjs": "^4.6.6",
     "sqlite-vec": "0.1.7-alpha.2"
   },
