--- a/package.json
+++ b/package.json
@@ -24,17 +24,15 @@
   "dependencies": {
     "@electron/rebuild": "^3.7.1",
     "@node-rs/jieba": "^2.0.1",
-    "@tanstack/react-virtual": "^3.13.4",
     "ali-oss": "^6.22.0",
     "axios": "^1.4.0",
     "better-sqlite3": "^11.8.1",
+    "electron-log": "^5.3.2",
     "eventemitter3": "^5.0.1",
     "font-list": "^1.5.1",
     "fs-extra": "^11.3.0",
     "llm-chunk": "^0.0.1",
     "openai": "^4.80.1",
-    "react-scan": "^0.3.2",
-    "roughjs": "^4.6.6",
     "sqlite-vec": "0.1.7-alpha.2"
   },
   "devDependencies": {
@@ -48,6 +46,7 @@
     "@commitlint/config-conventional": "^19.8.0",
     "@fortaine/fetch-event-source": "^3.0.6",
     "@loadable/component": "^5.15.3",
+    "@tanstack/react-virtual": "^3.13.4",
     "@tmikeladze/react-cmdk": "1.3.14",
     "@types/ali-oss": "^6.16.11",
     "@types/babel__standalone": "^7.1.8",
@@ -114,6 +113,7 @@
     "react-inlinesvg": "^4.0.5",
     "react-markdown": "^9.0.3",
     "react-router-dom": "^6.12.1",
+    "react-scan": "^0.3.2",
     "react-syntax-highlighter": "^15.6.1",
     "rehype-katex": "^7.0.1",
     "remark-directive": "^3.0.1",
@@ -122,6 +122,7 @@
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.1",
     "rollup-plugin-visualizer": "^5.9.2",
+    "roughjs": "^4.6.6",
     "slate": "^0.112.0",
     "slate-history": "^0.110.3",
     "slate-react": "^0.112.1",
