--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/better-sqlite3": "^7.6.12",
     "@types/codemirror": "^5.60.7",
     "@types/fs-extra": "^11.0.4",
+    "@types/immutability-helper": "^2.6.3",
     "@types/is-hotkey": "^0.1.7",
     "@types/katex": "^0.16.2",
     "@types/loadable__component": "^5.13.5",
@@ -88,6 +89,7 @@
     "gsap": "^3.12.5",
     "husky": "^9.1.7",
     "immer": "^10.0.2",
+    "immutability-helper": "^3.1.1",
     "is-hotkey": "^0.2.0",
     "katex": "^0.16.8",
     "less": "^4.1.3",
@@ -112,6 +114,7 @@
     "react-icons": "^4.10.1",
     "react-inlinesvg": "^4.0.5",
     "react-markdown": "^9.0.3",
+    "react-resizable": "^3.0.5",
     "react-router-dom": "^6.12.1",
     "react-scan": "^0.3.2",
     "react-syntax-highlighter": "^15.6.1",
