--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "dayjs": "^1.11.13",
     "electron": "^34.0.1",
     "electron-builder": "^25.1.8",
+    "electron-context-menu": "^4.0.5",
     "electron-devtools-installer": "^4.0.0",
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^10.1.1",
