--- a/.github/workflows/page-release.yaml
+++ b/.github/workflows/page-release.yaml
@@ -3,6 +3,8 @@ on:
   push:
     branches:
       - master
+permissions:
+  contents: write
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -29,8 +31,6 @@ jobs:
           NODE_OPTIONS: '--max_old_space_size=8192'
 
       - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@4.1.3
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
-          BRANCH: gh-pages # The branch the action should deploy to.
-          FOLDER: dist # The folder the action should deploy.
-          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          folder: dist
