--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-image-crop": "^11.0.7",
     "react-inlinesvg": "^4.0.5",
     "react-markdown": "^9.0.3",
     "react-resizable": "^3.0.5",
