--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "postinstall": "npm run rebuild",
     "format": "prettier --write \"src-electron/**/*.{ts,tsx,js,jsx,json,css,less,scss}\" \"src/**/*.{ts,tsx,js,jsx,json,css,less,scss}\"",
     "lint:staged": "lint-staged",
-    "prepare": "husky"
+    "prepare": "husky",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run"
   },
   "dependencies": {
     "@electron/rebuild": "^3.7.1",
@@ -68,6 +71,7 @@
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
     "@vitejs/plugin-react-swc": "^3.3.0",
+    "@vitest/ui": "^3.2.4",
     "ahooks": "^3.7.7",
     "antd": "^5.7.3",
     "autoprefixer": "^10.4.19",
@@ -92,6 +96,7 @@
     "husky": "^9.1.7",
     "immer": "^10.0.2",
     "is-hotkey": "^0.2.0",
+    "jsdom": "^26.1.0",
     "katex": "^0.16.8",
     "less": "^4.1.3",
     "lint-staged": "^15.5.0",
@@ -140,6 +145,8 @@
     "uuid": "^9.0.1",
     "vite": "4.3.9",
     "vite-plugin-electron": "^0.29.0",
+    "vitest": "^3.2.4",
+    "vitest-canvas-mock": "^0.3.3",
     "words-count": "^2.0.2",
     "yaml": "^2.7.1",
     "zustand": "^4.3.8"
