--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "better-sqlite3": "^11.8.1",
     "electron-log": "^5.3.2",
     "eventemitter3": "^5.0.1",
+    "express": "^5.1.0",
     "font-list": "^1.5.1",
     "fs-extra": "^11.3.0",
     "llm-chunk": "^0.0.1",
@@ -60,6 +61,7 @@
     "@types/babel__standalone": "^7.1.8",
     "@types/better-sqlite3": "^7.6.12",
     "@types/codemirror": "^5.60.7",
+    "@types/express": "^5.0.3",
     "@types/fs-extra": "^11.0.4",
     "@types/is-hotkey": "^0.1.7",
     "@types/katex": "^0.16.2",
