--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "notes",
   "private": true,
-  "version": "0.13.4",
+  "version": "0.14.0",
   "author": {
     "name": "LastKnightCoder"
   },
@@ -65,6 +65,7 @@
     "@types/codemirror": "^5.60.7",
     "@types/express": "^5.0.3",
     "@types/fs-extra": "^11.0.4",
+    "@types/html2canvas": "^1.0.0",
     "@types/is-hotkey": "^0.1.7",
     "@types/katex": "^0.16.2",
     "@types/loadable__component": "^5.13.5",
@@ -101,6 +102,7 @@
     "framer-motion": "^10.13.0",
     "graphviz-react": "^1.2.5",
     "gsap": "^3.12.5",
+    "html2canvas": "^1.4.1",
     "husky": "^9.1.7",
     "immer": "^10.0.2",
     "is-hotkey": "^0.2.0",
