--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "notes",
   "private": true,
-  "version": "0.14.1",
+  "version": "0.14.2",
   "author": {
     "name": "LastKnightCoder"
   },
@@ -64,6 +64,7 @@
     "@types/better-sqlite3": "^7.6.12",
     "@types/codemirror": "^5.60.7",
     "@types/express": "^5.0.3",
+    "@types/fluent-ffmpeg": "^2.1.27",
     "@types/fs-extra": "^11.0.4",
     "@types/html2canvas": "^1.0.0",
     "@types/is-hotkey": "^0.1.7",
@@ -99,6 +100,7 @@
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.5",
+    "fluent-ffmpeg": "^2.1.3",
     "framer-motion": "^10.13.0",
     "graphviz-react": "^1.2.5",
     "gsap": "^3.12.5",
