--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "preview": "vite preview",
     "updater": "node scripts/updater.mjs",
     "release": "node scripts/release.mjs",
-    "rebuild": "electron-rebuild -f -w better-sqlite3",
+    "rebuild": "electron-rebuild -f -w better-sqlite3 -w @myriaddreamin/typst-ts-node-compiler",
     "postinstall": "npm run rebuild",
     "format": "prettier --write \"src-electron/**/*.{ts,tsx,js,jsx,json,css,less,scss}\" \"src/**/*.{ts,tsx,js,jsx,json,css,less,scss}\"",
     "lint:staged": "lint-staged",
@@ -35,6 +35,7 @@
     "axios": "^1.4.0",
     "better-sqlite3": "^11.8.1",
     "electron-log": "^5.3.2",
+    "@myriaddreamin/typst-ts-node-compiler": "0.6.1-rc3",
     "eventemitter3": "^5.0.1",
     "express": "^5.1.0",
     "font-list": "^1.5.1",
