--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "preview": "vite preview",
     "updater": "node scripts/updater.mjs",
     "release": "node scripts/release.mjs",
-    "rebuild": "electron-rebuild -f -w better-sqlite3 -w @myriaddreamin/typst-ts-node-compiler",
+    "rebuild": "electron-rebuild -f -w better-sqlite3",
     "postinstall": "npm run rebuild",
     "format": "prettier --write \"src-electron/**/*.{ts,tsx,js,jsx,json,css,less,scss}\" \"src/**/*.{ts,tsx,js,jsx,json,css,less,scss}\"",
     "lint:staged": "lint-staged",
