--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "prettier-plugin-tailwindcss": "^0.6.14",
     "sqlite-vec": "0.1.7-alpha.2",
     "tailwindcss": "^4.1.11",
+    "ws": "^8.18.3",
     "youtubei.js": "^15.1.1"
   },
   "devDependencies": {
@@ -80,6 +81,7 @@
     "@types/react-dom": "^18.2.1",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@types/uuid": "^9.0.8",
+    "@types/ws": "^8.18.1",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
     "@vitejs/plugin-react-swc": "^3.3.0",
