--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@emoji-mart/react": "^1.1.1",
     "@fortaine/fetch-event-source": "^3.0.6",
     "@loadable/component": "^5.15.3",
+    "@notionhq/client": "^5.3.0",
     "@tanstack/react-virtual": "^3.13.4",
     "@tmikeladze/react-cmdk": "1.3.14",
     "@types/ali-oss": "^6.16.11",
