--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "llm-chunk": "^0.0.1",
     "openai": "^4.80.1",
     "prettier-plugin-tailwindcss": "^0.6.14",
+    "sharp": "^0.34.4",
     "sqlite-vec": "0.1.7-alpha.2",
     "tailwindcss": "^4.1.11",
     "ws": "^8.18.3",
@@ -96,7 +97,7 @@
     "codemirror": "5",
     "cross-env": "^7.0.3",
     "dayjs": "^1.11.13",
-    "electron": "^34.0.1",
+    "electron": "^34.5.8",
     "electron-builder": "^25.1.8",
     "electron-context-menu": "^4.0.5",
     "electron-devtools-installer": "^4.0.0",
